# aicad

./: Cargo.toml  README.md  pyproject.toml
examples/: GraphColouring.rs  Sudoku.rs
src/: lib.rs  pyaicad.rs
src/constraints/: all_different.rs  equals.rs  mod.rs  not_equals.rs
src/core/: mod.rs  problem.rs  variable.rs
src/mdd/: edge.rs  layer.rs  mdd.rs  mod.rs  node.rs
src/mdd/heuristics/: merge.rs  mod.rs  ordering.rs
src/modelling/: mod.rs  problem.rs  variable.rs
src/utils/: bitset.rs  mod.rs
