[package]
name = "aicad"
version = "0.1.0"
edition = "2024"
crate-type = ["cdylib"]

[dependencies]
rustc-hash = "2.1"
pyo3 = { version= "0.28", features = ["extension-module"] }
rand = "0.10"
rand_xoshiro = "0.8"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
